--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "koa": "^2.13.0",
     "koa-bodyparser": "^4.3.0",
     "koa-json-error": "^3.1.2",
-    "koa-router": "^10.0.0"
+    "koa-parameter": "^3.0.1",
+    "koa-router": "^10.0.0",
+    "mongoose": "^5.11.13"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
