--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "koa-jwt": "^4.0.0",
     "koa-parameter": "^3.0.1",
     "koa-router": "^10.0.0",
+    "koa-static": "^5.0.0",
     "mongoose": "^5.11.13"
   },
   "devDependencies": {
